# json-escape-simd

./: .yarnrc.yml  CHANGELOG.md  Cargo.toml  README.md  package.json  plan.md  test.rs
.github/workflows/: CI.yml  benchmark.yml  release-crates.yml
benches/: escape.rs
cpu-features/src/: main.rs
examples/: escape.rs
src/: aarch64.rs  generic.rs  lib.rs  util.rs  x86.rs
src/simd/: README.md  avx2.rs  avx512.rs  bits.rs  mod.rs  neon.rs  sse2.rs  traits.rs  v128.rs
tests/: stress.rs
