[workspace]
members = ["cpu-features"]

[package]
name = "json-escape-simd"
version = "1.1.0"
edition = "2024"
rust-version = "1.89.0"
include = ["src/**/*.rs"]
description = "Optimized SIMD routines for escaping JSON strings."
license = "MIT"
homepage = "https://github.com/napi-rs/json-escape-simd"
repository = "https://github.com/napi-rs/json-escape-simd"

[[example]]
name = "escape"
path = "examples/escape.rs"

[features]
codspeed = ["criterion2/codspeed"]

[[bench]]
name = "escape"
harness = false
path = "benches/escape.rs"

[dependencies]
sonic-simd = "0.1"

[dev-dependencies]
criterion2 = "3"
glob = "0.3"
rand = "0.9"
serde = "1"
serde_json = "1"
v_jsonescape = "0.7"
json-escape = "0.3.0"
sonic-rs = "0.5"

[profile.bench]
lto = true
codegen-units = 1

[profile.instruments]
inherits = "release"
lto = false
debug = true
